plugins {
    id 'java'
}

group 'com.aukocharlie'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
}


jar {
    manifest {
        attributes("Implementation-Title": "Gradle",
                "Implementation-Version": version)
    }
}

compileTestJava {
    // Show parameter names
    options.compilerArgs << "-parameters"
}

compileJava {
    doFirst {
        // Export necessary package
        options.compilerArgs = [
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=recorder4j.main',
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=recorder4j.main',
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=recorder4j.main',
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=recorder4j.main',
                '--add-exports', 'jdk.jdi/com.sun.tools.jdi=recorder4j.main'
        ]
    }
}
java {
    // Solve: module 'lombok' not found.
    modularity.inferModulePath.set(true)
}

sourceCompatibility = 11